Problem with the password visibility. Now fixed.

--- a/portfolio.css
+++ b/portfolio.css
@@ -20,7 +20,7 @@
     padding: 1px 0px 0px;
     overflow: hidden;
     min-width: 0px;
-    background-image:url("img/portfolio_home.jpg");
+    background-image:url("img/portfolio_home.png");
     background-attachment: scroll;
     -webkit-background-size: auto;
     background-size: auto;
@@ -2382,7 +2382,7 @@
         margin-right: auto;
         float: none;
         clear: none;
-        display: none;
+        display: block;
     }
 
     #row_1_title {
@@ -2531,6 +2531,7 @@
         margin-right: auto;
         float: none;
         clear: none;
+        display: block;
     }
 
     #column_1_1 {
@@ -2626,7 +2627,7 @@
 
     #background_image {
         width: 100%;
-        background-image:url("img/portfolio_home_small.jpg");
+        background-image:url("img/portfolio_home_small.png");
         background-attachment: scroll;
         -webkit-background-size: auto;
         background-size: auto;
@@ -2639,6 +2640,10 @@
         width: 100%;
         max-width: 445px;
         min-width: 320px;
+    }
+
+    #row_1_title {
+        font-style: normal;
     }
 }
 
